@@ -1,3 +1,12 @@
+Changes in version: plink_1.5-1
+
+Bug Fixes:
+  o The manner in which the plot history was being saved created issues
+  when installing the package on non-Windows machines. This functionality
+  has been temporarily disabled
+
+==============================
+
 Changes in version: plink_1.5-0
 
     o The vignette was cleaned up and the package was re-added to CRAN
